Routing Engine is implemented basically, but not working atm, maybe fix this evening.

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     },
     "require": {
         "php": ">=7.0",
-        "mikey179/vfsStream": "^1.6"
+        "mikey179/vfsStream": "^1.6",
+        "fig/http-message-util": "^1.1"
     }
 
 }
