working routing engine + template engine. wuhu

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     ],
     "autoload": {
         "psr-4": {
-            "Angle\\": "src/"
+            "Angle\\": "src/",
+            "Angle\\Examples\\Controllers\\": "Controllers/"
         }
     },
     "require": {
