--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     "require": {
         "php": ">=7.0",
         "mikey179/vfsStream": "^1.6",
-        "fig/http-message-util": "^1.1"
+        "fig/http-message-util": "^1.1",
+        "tracy/tracy": "^2.4"
     }
 
 }
