--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,5 @@
 Options +FollowSymLinks
 RewriteEngine On
-RewriteRule ^(.*)$ index.php [NC,L]
+RewriteRule !\.(ico|gif|jpg|png|css|js|swf|flv|map|ttf|woff|woff2)$ index.php [QSA,L]
+RewriteRule ^views - [L,NC]
+RewriteRule ^(.*)$ views/$1 [NC,L]
