fix: changed dir struct to fit psr-4 autoload standard

--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,7 @@
     ],
     "autoload": {
         "psr-4": {
-            "Angle\\": "src/",
-            "Angle\\Examples\\Controllers\\": "Controllers/"
+            "Angle\\": "src/"
         }
     },
     "require": {
