--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
   "require": {
     "php": ">=7.4",
     "mikey179/vfsstream": "^1.6",
-    "fig/http-message-util": "^1.1",
+    "fig/http-message-util": "^1.1"
+  },
+  "require-dev": {
     "tracy/tracy": "^2.4"
   }
 }
